--- a/views/new-movies.ejs
+++ b/views/new-movies.ejs
@@ -14,5 +14,9 @@
     </nav>
 </div>
 
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/jquery/jquery.min.js"></script>
+<script src="/js/bin/materialize.min.js"></script>
+
 </body>
 </html>
