--- a/views/details-movie.ejs
+++ b/views/details-movie.ejs
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
 
-    <link rel="stylesheet" href="/css/jquery/jquery.mobile.min.css">
-    <link rel="stylesheet" href="/css/jquery/jquery-ui.min.css">
     <link rel="stylesheet" href="/css/materialize.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen"/>
 </head>
@@ -41,8 +39,7 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/jquery/jquery.min.js"></script>
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>-->
+<script src="/js/bin/materialize.min.js"></script>
 
 <script>
     io = io.connect();
