--- a/views/list-movies.ejs
+++ b/views/list-movies.ejs
@@ -23,8 +23,9 @@
     </nav>
 </div>
 
-<div id="content">
-    <div id="list-movies"></div>
+<div class="had-container">
+    <div id="list-movies" class="row">
+    </div>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
