--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,128 +7,75 @@ html body {
     width: 100%;
     height: 100%;
     background-color: #000000;
-    /*header {
-      height: 50px;
-      background-color: #550000;
-      position: fixed;
-      z-index: 1000;
-      right: 0;
-      left: 0;
-      top: 0;
+}
 
-      a {
-        padding: 9px 20px;
-        margin: 5px 0 0 10px;
-        border-radius: 7px;
-        color: #FFFFFF;
-        background-color: #cfd8dc;
-        display: inline-block;
-        font-size: 17px;
-      }
-    }
+html body.movie-details #content {
+    margin-bottom: 5px;
+}
 
-    #content {
-      width: 100%;
-      height: 100%;
-    }
+html body.movie-details #content h4 {
+    display: inline-block;
+}
 
-    &.movie-details {
+html body.movie-details #content .fond {
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 10px;
+    max-height: 270px;
+    overflow: hidden;
+}
 
-      #content {
-        padding: 14px;
-        font-size: 20px;
+html body.movie-details #content #jaquette {
+    opacity: 0.8;
+}
 
-        .fond {
-          background-color: rgba(255, 255, 255, 0.5);
-          width: 620px;
-          padding: 10px;
-          max-height: 430px;
-          overflow: hidden;
+html body.list-movies {
+    color: #FFFFFF;
+}
 
-          h2 {
-            font-size: 28px;
-            display: inline;
-          }
+html body.list-movies .movie {
+    position: relative;
+}
 
-          #year {
-            margin-left: 10px;
+html body.list-movies .movie .title {
+    height: 55px;
+    overflow: hidden;
+}
+
+html body.list-movies .movie .title h2 {
             font-size: 24px;
-          }
+    margin: 0;
+    padding: 0;
+    display: inline;
+}
 
-          #genre {
-            font-size: 13px;
-          }
-
-          #overview {
-            width: 600px;
-            text-align: justify;
-          }
-        }
-
-        #jaquette {
-          width: 300px;
+html body.list-movies .movie .info {
           position: absolute;
-          top: 65px;
-          right: 30px;
-          opacity: 0.8;
-        }
-      }
-    }
+    width: 94%;
+    bottom: 5px;
+    padding: 0 5px;
+}
 
-    &.list-movies {
-      color: #FFFFFF;
-
-      #content {
-        padding: 10px;
-
-        .movie-vertical {
-          display: inline-block;
-          width: 24%;
-          vertical-align: top;
-          margin: 5px 7px 0 0;
-          position: relative;
-
-          .title {
-            height: 55px;
-            overflow: hidden;
-
-            h2 {
-              font-size: 24px;
-              margin: 0;
-              padding: 0;
-              display: inline;
-            }
-          }
-
-          .info {
+html body.list-movies .movie .info::before {
+    content: "";
             position: absolute;
+    bottom: -1px;
             left: 0;
             width: 100%;
-            bottom: 5px;
-            padding: 0 5px;
+    height: 100%;
+    background-color: rgba(150, 0, 0, 0.5);
+}
 
-            &::before {
-              content: "";
-              position: absolute;
-              bottom: -1px;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              background-color: rgba(150, 0, 0, 0.5);
-            }
-          }
+html body.list-movies .movie img {
+    width: 187px;
+    height: 281px;
+}
 
-          img {
-            width: 187px;
-            height: 281px;
-          }
+html body.list-movies .movie a {
+    color: #FFFFFF;
+}
 
-          a {
-            color: #FFFFFF;
-          }
-        }
-      }
-    }*/
+html body .button-collapse {
+    margin: 0 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
