--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -7,69 +7,23 @@ html {
     height: 100%;
     background-color: #000000;
 
-    /*header {
-      height: 50px;
-      background-color: #550000;
-      position: fixed;
-      z-index: 1000;
-      right: 0;
-      left: 0;
-      top: 0;
-
-      a {
-        padding: 9px 20px;
-        margin: 5px 0 0 10px;
-        border-radius: 7px;
-        color: #FFFFFF;
-        background-color: #cfd8dc;
-        display: inline-block;
-        font-size: 17px;
-      }
-    }
-
-    #content {
-      width: 100%;
-      height: 100%;
-    }
-
     &.movie-details {
 
       #content {
-        padding: 14px;
-        font-size: 20px;
+        margin-bottom: 5px;
+
+        h4 {
+          display: inline-block;
+        }
 
         .fond {
           background-color: rgba(255, 255, 255, 0.5);
-          width: 620px;
           padding: 10px;
-          max-height: 430px;
+          max-height: 270px;
           overflow: hidden;
-
-          h2 {
-            font-size: 28px;
-            display: inline;
-          }
-
-          #year {
-            margin-left: 10px;
-            font-size: 24px;
-          }
-
-          #genre {
-            font-size: 13px;
-          }
-
-          #overview {
-            width: 600px;
-            text-align: justify;
-          }
         }
 
         #jaquette {
-          width: 300px;
-          position: absolute;
-          top: 65px;
-          right: 30px;
           opacity: 0.8;
         }
       }
@@ -78,56 +32,51 @@ html {
     &.list-movies {
       color: #FFFFFF;
 
-      #content {
-        padding: 10px;
+      .movie {
+        position: relative;
 
-        .movie-vertical {
-          display: inline-block;
-          width: 24%;
-          vertical-align: top;
-          margin: 5px 7px 0 0;
-          position: relative;
+        .title {
+          height: 55px;
+          overflow: hidden;
 
-          .title {
-            height: 55px;
-            overflow: hidden;
-
-            h2 {
-              font-size: 24px;
-              margin: 0;
-              padding: 0;
-              display: inline;
-            }
-          }
-
-          .info {
-            position: absolute;
-            left: 0;
-            width: 100%;
-            bottom: 5px;
-            padding: 0 5px;
-
-            &::before {
-              content: "";
-              position: absolute;
-              bottom: -1px;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              background-color: rgba(150, 0, 0, 0.5);
-            }
-          }
-
-          img {
-            width: 187px;
-            height: 281px;
-          }
-
-          a {
-            color: #FFFFFF;
+          h2 {
+            font-size: 24px;
+            margin: 0;
+            padding: 0;
+            display: inline;
           }
         }
+
+        .info {
+          position: absolute;
+          width: 94%;
+          bottom: 5px;
+          padding: 0 5px;
+
+          &::before {
+            content: "";
+            position: absolute;
+            bottom: -1px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(150, 0, 0, 0.5);
+          }
+        }
+
+        img {
+          width: 187px;
+          height: 281px;
+        }
+
+        a {
+          color: #FFFFFF;
+        }
       }
-    }*/
+    }
+
+    .button-collapse {
+      margin: 0 20px;
+    }
   }
 }
