--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,8 +1,11 @@
 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons mdi-navigation-menu"></i></a>
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href="/">Accueil</a></li>
-                <li><a href="/list-movies">Liste des films</a></li>
-                <li><a href="/search-movies">Rechercher un film</a></li>
-                <li><a href="/new-movies">Nouveautés</a></li>
-                <li><a href="/about"></a></li>
-            </ul>
+<ul class="side-nav" id="mobile-demo">
+    <li><a href="/">Accueil</a></li>
+    <li><a href="/list-movies">Liste des films</a></li>
+    <li><a href="/search-movies">Rechercher un film</a></li>
+    <li><a href="/new-movies">Nouveautés</a></li>
+    <li><a href="/about"></a></li>
+</ul>
+<ul class="left">
+    <li>WeuS TV - v0.1.0</li>
+</ul>
