--- a/views/details-movie.ejs
+++ b/views/details-movie.ejs
@@ -27,9 +27,9 @@
     <div id="content" class="row">
         <h4></h4>
         <span id="year"></span>
+        <span id="rating" class="right"></span>
 
         <div class="fond col s9 z-depth-2">
-            <span id="rating"></span>
             <span id="genre"></span>
             <span id="adult"></span>
 
