--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -38,6 +38,13 @@ html {
           margin-top: 10px;
         }
       }
+
+      #commands {
+
+        a {
+          margin-right: 10px;
+        }
+      }
     }
 
     &.list-movies {
