--- a/views/details-movie.ejs
+++ b/views/details-movie.ejs
@@ -40,13 +40,11 @@
         </div>
     </div>
     <div id="commands" class="row">
-        <div class="col s12">
+        <div class="col s12 center-align">
             <a class="btn-floating btn-large waves-effect waves-light green" href="#"><i
                         class="material-icons mdi-av-play-arrow"></i></a>
-            <ul>
-
-                <li><a href="/movie/<%= id %>/bande-annonce">Voir la Bande Annonce</a></li>
-            </ul>
+            <a class="btn-floating btn-large waves-effect waves-light blue" href="#"><i
+                        class="material-icons mdi-av-movie"></i></a>
         </div>
     </div>
 </div>
