Add control "bande-annonce"

--- a/views/bande-annonce.ejs
+++ b/views/bande-annonce.ejs
@@ -2,7 +2,7 @@
 <html>
 <head lang="fr">
     <meta charset="UTF-8">
-    <title><%= title %></title>
+    <title>Bande annonce</title>
 
     <link rel="stylesheet" href="/css/jquery/jquery.mobile.min.css">
     <link rel="stylesheet" href="/css/jquery/jquery-ui.min.css">
