--- a/views/list-movies.ejs
+++ b/views/list-movies.ejs
@@ -29,7 +29,7 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="/js/jquery/jquery.min.js"></script>
 <script src="/js/materialize/bin/materialize.min.js"></script>
 <script src="/js/custom/list-movies.js"></script>
 
