--- a/views/bande-annonce.ejs
+++ b/views/bande-annonce.ejs
@@ -2,7 +2,7 @@
 <html>
 <head lang="fr">
     <meta charset="UTF-8">
-    <title><%= title %></title>
+    <title>Bande annonce | <%= id %></title>
 
     <link rel="stylesheet" href="/css/materialize.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen"/>
@@ -25,7 +25,7 @@
 <div class="had-container">
     <div id="content" class="row">
         <div class="col s12">
-            <iframe width="780" height="430" src="https://www.youtube.com/embed/<%= key %>" frameborder="0"
+            <iframe width="780" height="410" src="https://www.youtube.com/embed/<%= key %>" frameborder="0"
                     allowfullscreen></iframe>
         </div>
     </div>
@@ -34,29 +34,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/jquery/jquery.min.js"></script>
 <script src="/js/materialize/bin/materialize.min.js"></script>
-
-<script>
-    io = io.connect();
-    var $ = jQuery;
-
-    // Emit ready event.
-    io.emit('ready');
-    console.time('ready');
-    io.emit('bande-annonce', {id: $('body').attr('id')});
-
-    // Listen for the talk event.
-    io.on('ready', function (data) {
-        console.timeEnd('ready');
-
-        io.on('bande-annonce', function (data) {
-            console.log(data);
-            if (data.site == "Youtube")
-                $('iframe').attr('src', 'https://www.youtube.com/embed/' + data.key);
-
-        });
-    });
-    $('.ui-page').css('background-color', 'rgba(0,0,0,0)');
-</script>
+<script src="/js/custom/bande-annonce.js"></script>
 
 </body>
 </html>
